updated to latest version of split.js which fixed a major problem with positioning for us.
also fixed an initial page layout bug while loading.

--- a/pdfviewer-custom/polar.css
+++ b/pdfviewer-custom/polar.css
@@ -52,6 +52,7 @@ body {
 .polar-htmlviewer #polar-sidebar {
     margin-top: 65px;
     height: calc(100% - 65px);
+    width: 100%;
 }
 
 /*.polar-htmlviewer #polar-progress {*/
